--- a/package.json
+++ b/package.json
@@ -7,16 +7,35 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^16.0.0",
+    "@ckeditor/ckeditor5-vue": "^1.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
+    "axios": "^0.18.0",
+    "colorthief": "^2.3.0",
+    "cropperjs": "^1.5.6",
+    "element-ui": "^2.13.0",
+    "exif-js": "^2.3.0",
+    "html2canvas": "^1.0.0-rc.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5",
+    "vue-clamp": "^0.2.2",
+    "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "^4.2.0",
     "@vue/cli-plugin-vuex": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
+    "node-loader": "^0.6.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "vue-loader": "^15.2.4",
+    "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
